Mon Apr  3 21:51:28 2006  Tim Janik  <timj@gtk.org>

	* tests/subnormals.cc: first test for correctness, then for performance.

Mon Apr  3 15:50:14 2006  Stefan Westerfeld <stefan@space.twc.de>

	* tests/subnormals.cc tests/subnormals-aux.cc: Added code which
	verifies that subnormal elimination functions are correct.

Sun Apr  2 18:19:42 2006  Tim Janik  <timj@gtk.org>

	* bse/Makefile.am: some more dependency and minor build fixes.

Sun Apr  2 03:31:24 2006  Tim Janik  <timj@gtk.org>

	* Makefile.am: merged with gslmakefile.inc. fixed dependencies. 
	simplified build rules. integrated with Makefile.decl.

	* *.hh *.cc: removed useless "mode: c++;" statement.
	fixed Bse::* functions being implemented in anonymous namespaces.

	* bsecxxmodule.cc: fixed non-static functions and static assertions.

	* bsecxxmodule.hh: assert the correct object type in the
	BSE_EFFECT_INTEGRATE_MODULE() macro via const_cast<>(this) instead
	of by using bogus namespacing.

	* bseieee754.h: work around gcc-4.2 not allowing "register" unions.

	* bseloader-guspatch.cc: fixed compiler warning.

	* gsldatahandle-mad.c:
	* bseloader-mad.c: include topconfig.h for libmad presence.

	* bsesequencer.cc: use offsetof() instead of G_STRUCT_OFFSET() which
	gcc-4.2 doesn't seem to like.

	* bsesong.c: fixed prototype scope.

	* gslmakefile.inc: removed, merged into Makefile.am.

	* gsldefs.h: include gslconfig.h, don't define BIRNET macros.

	* gslwavechunk.c: fixed variable initialization.

Sat Apr  1 16:34:48 2006  Tim Janik  <timj@gtk.org>

	* tests/subnormals-aux.cc:
	* tests/subnormals.cc: extended tests.

	* bseieee754.h: renamed denormal-cancellation macros to
	BSE_FLOAT_FLUSH() and BSE_DOUBLE_FLUSH().
	added arithmetic and ?:-operator variants for denormal cancellation.
	use the arithmetic variants by default, which seems to be the fastest
	in most scenrios.

Sat Apr  1 14:23:57 2006  Tim Janik  <timj@gtk.org>

	* tests/subnormals-aux.cc: