@@ -10,4 +10,3 @@ mathtests
 testcxx
 testsmart
 testfft
-testwavechunk
