@@ -1,3 +1,7 @@
+Tue Apr  4 02:06:45 2006  Tim Janik  <timj@gtk.org>
+
+	* tests/Makefile.am: build and check loophandle, got rid of testwavechunk.
+
 Mon Apr  3 21:51:28 2006  Tim Janik  <timj@gtk.org>
 
 	* tests/subnormals.cc: first test for correctness, then for performance.
